2008-02-03  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/CUDA-nvidia: added support to the newly added BGRA pixel type.

2008-02-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: added BGRA type,
	with appropriate conversions to other types.

2008-01-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/firewirecamera/CMakeLists.txt: add new
	method for supporting firewirecamera.

	* src/libYARP_dev/src/PopulateDrivers.cpp.in: added the
	firewirecamera device (missing, thanks Stefan Freyr Stefansson
	for pointing this out).

2008-01-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpModuleHooks.cmake: fix problem with circular
	dependency on some versions of cmake, and with library lists
	leaking into definitions.

2008-01-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/yarpdev_lib.cpp.in: allow device library initialization
	to happen multiple times - so clients don't need to know what
	has already been done implicitly (configuration dependent).

2008-01-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpCompileModules.cmake: change defaults in new method
	of device compilation to be as much like the old ones as 
	possible.

2008-01-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/PopulateDrivers.cpp.in: fixed accidental
	inhibition of older method of compiling devices.

	* conf/YarpCompileModules.cmake: fixed accidental inhibition of
	older method of compiling devices.

	* conf/YarpDevice.cmake: better defaults for skipping devices.

2008-01-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Property.cpp: for Property::fromConfigFile,
	implement a search path for include directives.

2008-01-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/DeviceDriver.cpp: bug when respond()
	method returned false to signal failure.  This failure
	message was being treated as a connection problem, which
	it isn't.
