@@ -31,4 +31,4 @@ Giacomo Spigler (nvidia gpu driver, cuda gpu driver, contributed to yarpfs)
 Freyr Magnusson (yarp::os::DummyConnector class)
 Marco Randazzo (read/reply bug report)
 Arjan Gijsberts (enabled video4linux2 supported in ffmpeg_grabber device)
-Stefan Freyr Stefansson (spotted gaps in support of a video device)
+Stefan Freyr Stefansson (patch for opencv_grabber)
